--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,11 @@
 		<div id="top banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<p>
+			je me presente fictivement
+		</p>
+		</div>
 		
 	</body>
 </html>
